desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_2.stderr
error: `desenv` field attribute must be used as list of modifiers
 --> test-assets/desenv/failure/desenv_wrong_usage_2.rs:5:7
  |
5 |     #[desenv = "value"]
  |       ^^^^^^
