desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv = "value"]
    field: String
}

fn main(){}